--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>✅ Compra Confirmada!</h1>
-    <p>Parabéns! Sua compra de <strong>R$27,90</strong> foi processada com sucesso.</p>
+    <h1>Obrigado pela sua compra!</h1>
     <p>Clique no botão abaixo para acessar o <strong>Grupo VIP no Telegram</strong>.</p>
 
     <a 
@@ -103,3 +102,4 @@
   </script>
 </body>
 </html>
+
