--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Obrigado pela sua compra!</title>
+  <title>PrivLeaksBR agradece pela sua compra!</title>
 
   <!-- Pixel do Facebook -->
   <script>
@@ -102,4 +102,5 @@
   </script>
 </body>
 </html>
+
 
