--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PrivLeaksBR agradece pela sua compra!</title>
+  <title>PrivLeaksBR</title>
 
   <!-- Pixel do Facebook -->
   <script>
@@ -75,8 +75,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Obrigado pela sua compra!</h1>
-    <p>Clique no botão abaixo para acessar o <strong>Grupo VIP no Telegram</strong>.</p>
+    <h1>PrivLeaksBR agradece pela sua compra!</h1>
+    <p>Clique no botão abaixo para acessar o <strong>Grupo VIP no Telegram</strong>:</p>
 
     <a 
       href="https://t.me/+oln4fJYlzYdkYWI5" 
@@ -102,5 +102,6 @@
   </script>
 </body>
 </html>
+
 
 
